@@ -139,9 +139,9 @@
 
 	function	db_save_host($host,$port,$status,$useip,$ip,$templateid,$hostid=NULL)
 	{
- 		if (!eregi('^([0-9a-zA-Z\_\.-]+)$', $host)) 
+ 		if (!eregi('^([0-9a-zA-Z\_\.-\$]+)$', $host)) 
 		{
-			error("Hostname should contain 0-9a-zA-Z_.- characters only");
+			error("Hostname should contain '0-9a-zA-Z_.-$' characters only");
 			return FALSE;
 		}
 
