@@ -1,5 +1,6 @@
 Changes for 1.1.5:
 
+ - added availability to using '$' sign for hosts and item keys (Eugene)
  - fixed 'perf_counter[*]' for WinXX (Eugene)
  - added parameter ListenIP to WinXX ZABBIX agent (Eugene)
  - increased message size for alerts (Eugene)
